# snapcast-rs

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Makefile  README.md  release-please-config.json
.githooks/: pre-push
.github/workflows/: ci.yml  release-please.yml  release.yml
.kiro/steering/: coding.md
crates/snapcast-client/: Cargo.toml
crates/snapcast-client/src/: config.rs  controller.rs  crypto.rs  discovery.rs  double_buffer.rs  lib.rs  stream.rs  time_provider.rs
crates/snapcast-client/src/connection/: mod.rs  ws.rs  wss.rs
crates/snapcast-client/src/decoder/: f32lz4.rs  flac.rs  mod.rs  opus.rs  vorbis.rs
crates/snapcast-client/src/player/: alsa.rs  coreaudio.rs  cpal_backend.rs  mod.rs  pulse.rs
crates/snapcast-client/tests/: integration.rs
crates/snapcast-proto/: Cargo.toml
crates/snapcast-proto/src/: lib.rs  sample_format.rs  status.rs  types.rs
crates/snapcast-proto/src/message/: base.rs  client_info.rs  codec_header.rs  error.rs  factory.rs  hello.rs  mod.rs  server_settings.rs  time.rs  wire.rs  wire_chunk.rs
crates/snapcast-server/: Cargo.toml
crates/snapcast-server/src/: auth.rs  config.rs  control.rs  crypto.rs  http.rs  jsonrpc.rs  lib.rs  mdns.rs  session.rs  state.rs  status.rs  time.rs
crates/snapcast-server/src/encoder/: f32lz4.rs  flac.rs  mod.rs  opus.rs  pcm.rs  vorbis.rs
crates/snapcast-server/src/stream/: airplay.rs  file.rs  librespot.rs  manager.rs  mod.rs  pipe.rs  process.rs  tcp.rs
crates/snapcast-tests/: Cargo.toml
crates/snapcast-tests/src/: lib.rs
crates/snapcast-tests/tests/: audio.rs  auth.rs  custom_protocol.rs  encryption.rs  handshake.rs  stream_routing.rs
crates/snapclient-rs/: Cargo.toml
crates/snapclient-rs/src/: cli.rs  config.rs  connection.rs  controller.rs  decoder.rs  discovery.rs  lib.rs  logging.rs  main.rs  mixer.rs  player.rs  resampler.rs  stream.rs  time_provider.rs
crates/snapclient-rs/src/connection/: mod.rs  ws.rs  wss.rs
crates/snapclient-rs/src/decoder/: flac.rs  mod.rs  opus.rs  vorbis.rs
crates/snapclient-rs/src/player/: alsa.rs  coreaudio.rs  mod.rs  pulse.rs
crates/snapclient-rs/tests/: integration.rs
crates/snapserver-rs/: Cargo.toml
crates/snapserver-rs/src/: auth.rs  config.rs  control.rs  http.rs  jsonrpc.rs  main.rs
crates/snapserver-rs/src/stream/: airplay.rs  file.rs  librespot.rs  mod.rs  pipe.rs  process.rs  tcp.rs  uri.rs
