[workspace]
resolver = "3"
members = ["crates/snapcast-proto", "crates/snapclient-rs"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/metaneutrons/snapcast-rs"
authors = ["Fabian Schmieder"]

[workspace.dependencies]
# Internal
snapcast-proto = { path = "crates/snapcast-proto" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Binary protocol
byteorder = "1"

# Auth
base64 = "0.22"

# Networking
tokio-tungstenite = "0.26"
tokio-rustls = "0.26"
rustls = "0.23"

# Audio decoding
symphonia = { version = "0.5", features = ["flac", "pcm", "ogg", "vorbis"] }
audiopus = "0.2"

# Audio resampling
rubato = "0.16"

# mDNS
mdns-sd = "0.12"

# Testing
[workspace.dependencies.mockall]
version = "0.13"

[profile.release]
lto = true
strip = true
codegen-units = 1
