[workspace]
resolver = "3"
members = ["crates/snapcast-proto", "crates/snapcast-client", "crates/snapcast-server", "crates/snapclient-rs", "crates/snapserver-rs", "crates/snapcast-tests"]

[workspace.package]
version = "0.3.1"
edition = "2024"
rust-version = "1.88"
license = "GPL-3.0-only"
repository = "https://github.com/metaneutrons/snapcast-rs"
authors = ["Fabian Schmieder"]

[workspace.dependencies]
# Internal
snapcast-proto = { path = "crates/snapcast-proto" }
snapcast-client = { path = "crates/snapcast-client", default-features = false }
snapcast-server = { path = "crates/snapcast-server" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Binary protocol
byteorder = "1"

# Auth
base64 = "0.22"

# Hostname
hostname = "0.4"
mac_address = "1"
libc = "0.2"

# Networking
tokio-tungstenite = { version = "0.26", features = ["connect", "__rustls-tls"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
futures-util = "0.3"

# Audio decoding
symphonia = { version = "0.5", features = ["flac", "pcm", "ogg", "vorbis"] }
audiopus = "0.2"

# Audio resampling
rubato = "0.16"

# Audio backends
coreaudio-rs = "0.14"
alsa = "0.9"
libpulse-binding = "2"
libpulse-simple-binding = "2"

# mDNS
mdns-sd = "0.12"

# Testing
[workspace.dependencies.mockall]
version = "0.13"

[profile.release]
lto = true
strip = true
codegen-units = 1

