[package]
name = "snapcast-client"
description = "Snapcast client library — embeddable synchronized multiroom audio"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
snapcast-proto = { workspace = true }
chacha20poly1305 = { workspace = true, optional = true }
hkdf = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
hostname = { workspace = true }
libc = { workspace = true }
mac_address = { workspace = true }
symphonia = { workspace = true }
opus-decoder = "0.1"

# Optional
mdns-sd = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
rubato = { workspace = true, optional = true }
lz4_flex = { version = "0.13.0", optional = true }

[features]
default = ["mdns"]
mdns = ["dep:mdns-sd"]
websocket = ["dep:tokio-tungstenite", "dep:futures-util"]
tls = ["websocket", "dep:tokio-rustls", "dep:rustls", "dep:rustls-native-certs"]
resampler = ["dep:rubato"]
f32lz4 = ["dep:lz4_flex"]
encryption = ["f32lz4", "dep:chacha20poly1305", "dep:hkdf", "dep:sha2"]
custom-protocol = ["snapcast-proto/custom-protocol"]
