[package]
name = "snapcast-proto"
description = "Snapcast binary protocol implementation"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
byteorder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
custom-protocol = []

[package.metadata.docs.rs]
all-features = false
