[package]
name = "snapcast-server"
description = "Snapcast server library — embeddable synchronized multiroom audio server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
snapcast-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
hostname = { workspace = true }
libc = { workspace = true }
mdns-sd = { workspace = true }

# Encoders — all optional
libflac-sys = { version = "0.3", optional = true }
audiopus = { workspace = true, optional = true }
vorbis_rs = { version = "0.5", optional = true }
ogg = { version = "0.9", optional = true }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
rust-ini = "0.21.3"
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["fs"] }

[features]
default = ["flac"]
flac = ["dep:libflac-sys"]
opus = ["dep:audiopus"]
vorbis = ["dep:vorbis_rs", "dep:ogg"]

[dev-dependencies]
tempfile = "3.27.0"
