[package]
name = "snapcast-server"
description = "Snapcast server library — embeddable synchronized multiroom audio server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
snapcast-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
hostname = { workspace = true, optional = true }
mdns-sd = { workspace = true, optional = true }

# Encoders — all optional
libflac-sys = { version = "0.3", optional = true }
audiopus = { workspace = true, optional = true }
vorbis_rs = { version = "0.5", optional = true }
ogg = { version = "0.9", optional = true }
lz4_flex = { version = "0.13.0", optional = true }

[features]
default = ["f32lz4", "mdns"]
flac = ["dep:libflac-sys"]
opus = ["dep:audiopus"]
vorbis = ["dep:vorbis_rs", "dep:ogg"]
f32lz4 = ["dep:lz4_flex"]
mdns = ["dep:mdns-sd", "dep:hostname"]

[dev-dependencies]
