[package]
name = "snapcast-server"
description = "Snapcast server library — embeddable synchronized multiroom audio server"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
base64 = { workspace = true }
chacha20poly1305 = { workspace = true, optional = true }
hkdf = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
subtle = { workspace = true }
snapcast-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
hostname = { workspace = true, optional = true }
mdns-sd = { workspace = true, optional = true }

# Encoders — all optional
libflac-sys = { version = "0.3", optional = true }
audiopus = { workspace = true, optional = true }
vorbis_rs = { version = "0.5", optional = true }
ogg = { version = "0.9", optional = true }
lz4_flex = { version = "0.13.0", optional = true }

[features]
default = ["flac", "mdns"]
flac = ["dep:libflac-sys"]
opus = ["dep:audiopus"]
vorbis = ["dep:vorbis_rs", "dep:ogg"]
f32lz4 = ["dep:lz4_flex"]
encryption = ["f32lz4", "dep:chacha20poly1305", "dep:hkdf", "dep:sha2"]
mdns = ["dep:mdns-sd", "dep:hostname"]
custom-protocol = ["snapcast-proto/custom-protocol"]

[dev-dependencies]
