[package]
name = "snapclient-rs"
description = "Snapcast client — synchronized multiroom audio player"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "snapclient-rs"
path = "src/main.rs"

[dependencies]
snapcast-client = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
libc = { workspace = true }

[features]
default = ["mdns"]
coreaudio = ["snapcast-client/coreaudio"]
alsa = ["snapcast-client/alsa"]
pulse = ["snapcast-client/pulse"]
mdns = ["snapcast-client/mdns"]
websocket = ["snapcast-client/websocket"]
tls = ["snapcast-client/tls"]
resampler = ["snapcast-client/resampler"]

[target.'cfg(target_os = "macos")'.dependencies]
snapcast-client = { workspace = true, features = ["coreaudio"] }

[target.'cfg(target_os = "linux")'.dependencies]
snapcast-client = { workspace = true, features = ["alsa"] }
