[package]
name = "snapclient-rs"
description = "Snapcast client — synchronized multiroom audio player"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "snapclient-rs"
path = "src/main.rs"

[dependencies]
snapcast-client = { workspace = true }
snapcast-proto = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
libc = { workspace = true }
cpal = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
alsa = { workspace = true }

[features]
default = ["mdns"]
mdns = ["snapcast-client/mdns"]
websocket = ["snapcast-client/websocket"]
tls = ["snapcast-client/tls"]
resampler = ["snapcast-client/resampler"]
