[package]
name = "snapclient-rs"
description = "Snapcast client — synchronized multiroom audio player"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "snapclient-rs"
path = "src/main.rs"

[dependencies]
snapcast-client = { workspace = true }
snapcast-proto = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
libc = { workspace = true }
cpal = "0.15"



[features]
default = ["mdns", "f32lz4"]
mdns = ["snapcast-client/mdns"]
f32lz4 = ["snapcast-client/f32lz4"]
websocket = ["snapcast-client/websocket"]
tls = ["snapcast-client/tls"]
resampler = ["snapcast-client/resampler"]
custom-protocol = ["snapcast-client/custom-protocol"]
encryption = ["snapcast-client/encryption"]
