[package]
name = "snapserver-rs"
description = "Snapcast server — synchronized multiroom audio server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "snapserver-rs"
path = "src/main.rs"

[dependencies]
snapcast-server = { workspace = true }
snapcast-proto = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-ini = "0.21"
hostname = { workspace = true }
mdns-sd = { workspace = true }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
tempfile = "3"
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["fs"] }
